<resources>
    <string name="app_name">ARORA</string>
    <string name="tap_to_return"> TAP T0\n CHANGE PROFILE</string>
    <string name="quest_notification"><font fgcolor='#CCCC00'>QUEST NOTIFICATION !</font> \n<font fgcolor='#FFFFFF'>TRY MINDFULLNESS BREATHING</font></string>
    <string name="already_have_an_account">Already have an account? <font fgcolor='#01C6DB'>Login</font></string>
    <string name="Exit"> <font fgcolor='#01C6DB'> Exit </font></string>
    <string name="meditation_tutorial_text">Press the button when \nthe ring around it appears</string>
    <string name="Continue"> <font fgcolor='#6DC49E'> Continue </font></string>
    <string name="PollensEarned">
        <font fgcolor='#FFFFFF'> You have earned </font>
        <font fgcolor='#FFD200'>999</font>
        <font fgcolor='#FFFFFF'> Pollens </font>
    </string>
    <string name="ARPageTitle">Welcome to the AR Page: 10 pollen to start!</string>
    <string name="ARPageTitle2">Catch Butterfly</string>
    <string name="pollen_requried_text">10 Pollens required to start the game</string>
    <string name="ARPollenPurchase">"Spend 10 pollen"</string>

    <string-array name="breathing_menu_selection">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string-array name="mindfulness_description">
        <item>accomplished breathing exercise!</item>
        <item>accomplished meditation exercise!</item>
        <item>accomplished walking exercise!</item>
    </string-array>

    <string-array name="meditation_menu_selection">
        <item>Beginner</item>
        <item>Intermediate</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_defaultTimerText">99</string>

    <string-array name="Pollen_Shop_Items">
        <item></item>
    </string-array>


    <string name="survey_question_1">How is your mood today?</string>
    <string name="survey_question_2">How stressed do you feel today?</string>
    <string name="a_white_butterfly">a white butterfly</string>
    <string name="a_black_butterfly">a black butterfly</string>
    <string name="username">Username</string>
    <string name="password">password</string>

    <string-array name="mood_array_pleasent_unpleasent">
        <item>Very Unpleasent</item>
        <item>Unpleasent</item>
        <item>Neutral</item>
        <item>Pleasant</item>
        <item>Very Pleasant</item>
    </string-array>

    <string-array name="mood_array_calm_tense">
        <item>Very Tensed</item>
        <item>A bit tense</item>
        <item>Neutral</item>
        <item>Just Calm</item>
        <item>Very Calm</item>
    </string-array>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_login">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="arora">ARORA</string>
    <string name="breathing_tutorial_text">press and hold green button - when you breathe in. release the button - when breathing out.</string>

    <string name="title_profile">Profile</string>
    <string name="title_practice">Practice</string>
    <string name="title_learn">Learn</string>
    <string name="title_community">Community</string>
    <string name="mindfulness_breathing">Mindfulness Breathing</string>
    <string name="mindfulness_meditation">Mindfulness Meditation</string>
    <string name="mindfulness_walking">Mindfulness Walking</string>

</resources>
