<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_profile">

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.aorora.ui.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile"/>

    <fragment
        android:id="@+id/navigation_practice"
        android:name="com.example.aorora.ui.PracticeFragment"
        android:label="@string/title_practice"
        tools:layout="@layout/fragment_practice" />

    <fragment
        android:id="@+id/navigation_learn"
        android:name="com.example.aorora.ui.LearnFragment"
        android:label="@string/title_learn"
        tools:layout="@layout/fragment_learn" />

    <fragment
        android:id="@+id/navigation_community"
        android:name="com.example.aorora.ui.CommunityFragment"
        android:label="@string/title_community"
        tools:layout="@layout/fragment_community"/>

    <activity
        android:id="@+id/profilePage"
        android:name="com.example.aorora.ProfilePage"
        android:label="activity_profile_page"
        tools:layout="@layout/activity_profile_page" />


</navigation>