<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/logo_butterfly"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:src="@drawable/orange_butterfly_image"/>


    <androidx.cardview.widget.CardView
        style="@style/survey_card_view"

        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/horizontal_margin">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/vertical_margin"
            android:background="#40ffffff"
            >

            <EditText
                android:id="@+id/login_email_et"
                style="@style/login_text_views"
                android:autofillHints="@string/prompt_email"
                android:hint="@string/prompt_username"
                android:inputType="textVisiblePassword|textNoSuggestions"
                android:selectAllOnFocus="true"
                android:nextFocusDown="@id/login_password_et"
                android:nextFocusRight="@id/login_password_et"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:textAlignment="viewStart" />

            <EditText
                android:id="@+id/login_password_et"
                android:autofillHints="@string/prompt_password"
                android:hint="@string/prompt_password"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:selectAllOnFocus="true"
                android:nextFocusDown="@id/login_button"
                android:nextFocusRight="@id/login_button"
                style="@style/login_text_views"/>

            <Button
                android:id="@+id/login_button"

                android:text="@string/action_login"
                style="@style/buttons"
                />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>



    <TextView
        android:id="@+id/app_name"

        android:layout_below="@id/logo_butterfly"
        android:layout_centerHorizontal="true"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/arora"
        style="@style/inverse_page_header_text_views"/>


</RelativeLayout>