<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"


    tools:context=".slider_survey_page"
    android:background="@drawable/dusk_background"

    >

    <androidx.cardview.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        style="@style/survey_card_view"
        >

        <androidx.appcompat.widget.LinearLayoutCompat
            style="@style/survey_card_linear_layout"
            >

            <TextView
                android:id="@+id/textview_question_1"
                tools:text="@string/survey_question_1"
                style="@style/survey_card_question_text_view"
                />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

                <ImageView
                    android:src="@drawable/white_butterfly"
                    android:id="@+id/imageview_butterfly_question_1"
                    style="@style/width_matchparent_height_wrapcontent"
                    android:contentDescription="@string/a_white_butterfly" />

                <ImageView
                    android:src="@drawable/black_butterfly"
                    android:id="@+id/imageview_butterfly_question_1_black"
                    style="@style/width_matchparent_height_wrapcontent"
                    android:contentDescription="@string/a_black_butterfly" />


            </RelativeLayout>


            <androidx.appcompat.widget.AppCompatSeekBar
                android:id="@+id/seekbar_question_1"
                style="@style/survey_card_seekbar"
                />

            <TextView
                android:id="@+id/textview_question_1_value_seekbar"
                style="@style/survey_card_answer_text_view"
                tools:text="Neutral"
                />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_question_2"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        style="@style/survey_card_view"
        >

        <androidx.appcompat.widget.LinearLayoutCompat
            style="@style/survey_card_linear_layout"
            >

            <TextView
                android:id="@+id/textview_question_2"
                tools:text="@string/survey_question_2"

                style="@style/survey_card_question_text_view"
                />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

                <ImageView
                    android:src="@drawable/white_butterfly"
                    android:id="@+id/imageview_butterfly_question_2"
                    android:contentDescription="@string/a_white_butterfly"

                    style="@style/width_matchparent_height_wrapcontent"
                    />

                <ImageView
                    android:src="@drawable/black_butterfly"
                    android:id="@+id/imageview_butterfly_question_2_black"
                    android:contentDescription="@string/a_black_butterfly"

                    style="@style/width_matchparent_height_wrapcontent"
                    />
            </RelativeLayout>


            <androidx.appcompat.widget.AppCompatSeekBar
                android:id="@+id/seekbar_question_2"
                style="@style/survey_card_seekbar"
                />

            <TextView
                android:id="@+id/textview_question_2_value_seekbar"
                style="@style/survey_card_answer_text_view"
                tools:text="Neutral"
                />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginLeft="@dimen/vertical_margin"
        android:layout_marginRight="@dimen/vertical_margin"
        >
        <Button
            android:id="@+id/submit_survey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="Submit"
            android:layout_alignParentBottom="true"
            />

        <Button
            android:id="@+id/skip_survey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:text="Skip"
            />

    </RelativeLayout>

</androidx.appcompat.widget.LinearLayoutCompat>
