<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LearnFragment"
    android:background="@drawable/dusk_background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!-- TODO: Update blank fragment layout -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Learn Mindfulness"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            style="@style/inverse_page_header_text_views"
            android:id="@+id/learn_page_header"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_below="@id/learn_page_header">


            <androidx.cardview.widget.CardView
                android:id="@+id/mindfulness_breathing"
                style="@style/survey_card_view_inverse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:selectableItemBackground"

                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="@dimen/activity_vertical_margin">

                    <ImageView
                        android:id="@+id/breathing_imageview"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:background="#00000000"
                        android:scaleType="fitCenter"
                        android:src="@drawable/breath_button"
                        android:tint="@color/white"

                        />

                    <TextView
                        style="@style/inverse_text_views"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"

                        android:layout_marginStart="@dimen/activity_vertical_margin"

                        android:layout_weight="8"
                        android:text="@string/mindfulness_breathing"

                        />

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:src="@drawable/ic_action_name"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/mindfulness_meditation"
                style="@style/survey_card_view_inverse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:selectableItemBackground"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="@dimen/activity_vertical_margin">

                    <ImageView
                        android:id="@+id/meditation_imageview"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:background="#00000000"
                        android:scaleType="fitCenter"
                        android:src="@drawable/mindfullness_meditation_icon"
                        android:tint="@color/white"

                        />

                    <TextView
                        style="@style/inverse_text_views"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"

                        android:layout_marginStart="@dimen/activity_vertical_margin"

                        android:layout_weight="8"
                        android:text="@string/mindfulness_meditation"

                        />

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:src="@drawable/ic_action_name"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/mindfulness_walking"
                style="@style/survey_card_view_inverse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:selectableItemBackground"

                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="@dimen/activity_vertical_margin">

                    <ImageView
                        android:id="@+id/walking_imageview"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:background="#00000000"
                        android:scaleType="fitCenter"
                        android:src="@drawable/location_button"
                        android:tint="@color/white"
                        />

                    <TextView
                        style="@style/inverse_text_views"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"

                        android:layout_marginStart="@dimen/activity_vertical_margin"

                        android:layout_weight="8"
                        android:text="@string/mindfulness_walking"

                        />

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:src="@drawable/ic_action_name"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>


    </RelativeLayout>

</FrameLayout>